crates/formatter/tests/snapshots/snapshots__migrations__000488_chat_last_turn_summary.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chats drop column last_turn_summary;
