crates/formatter/tests/snapshots/snapshots__migrations__000488_chat_last_turn_summary.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chats add column last_turn_summary text;
