crates/formatter/tests/snapshots/snapshots__migrations__000489_ai_model_prices.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists ai_model_prices cascade;
