crates/formatter/tests/snapshots/snapshots__migrations__000490_trigger_delete_user_secrets.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop the BEFORE INSERT/UPDATE guard added by 000489.
drop trigger if exists trigger_upsert_user_secrets on user_secrets;
drop function IF exists insert_user_secret_fail_if_user_deleted;

-- Restore the previous body of delete_deleted_user_resources() from
-- 000194_trigger_delete_user_user_link.up.sql, dropping the
-- user_secrets cleanup added by 000489.
create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
	declare
	begin
		if (NEW.deleted) then
			-- Remove their api_keys
			delete from api_keys
			where user_id = OLD.id;

			-- Remove their user_links
			-- Their login_type is preserved in the users table.
			-- Matching this user back to the link can still be done by their
			-- email if the account is undeleted. Although that is not a guarantee.
			delete from user_links
			where user_id = OLD.id;
		end if;
		return NEW;
	end;
$$;
