crates/formatter/tests/snapshots/snapshots__migrations__000491_mcp_server_forward_coder_headers.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table mcp_server_configs drop column forward_coder_headers;
