crates/formatter/tests/snapshots/snapshots__migrations__000491_mcp_server_forward_coder_headers.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table mcp_server_configs add column forward_coder_headers boolean not null default false;
