crates/formatter/tests/snapshots/snapshots__migrations__000492_delete_org_members_on_user_soft_delete.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore the previous body of delete_deleted_user_resources() from
-- migration 000490 (without the organization_members cleanup).
create or replace function delete_deleted_user_resources() returns trigger language plpgsql as $$
	declare
	begin
		if (NEW.deleted) then
			-- Remove their api_keys
			delete from api_keys
			where user_id = OLD.id;

			-- Remove their user_links
			-- Their login_type is preserved in the users table.
			-- Matching this user back to the link can still be done by their
			-- email if the account is undeleted. Although that is not a guarantee.
			delete from user_links
			where user_id = OLD.id;

			-- Remove their user_secrets.
			-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
			-- does not remove the users row so the FK cascade never fires.
			delete from user_secrets
			where user_id = OLD.id;
		end if;
		return NEW;
	end;
$$;
