crates/formatter/tests/snapshots/snapshots__migrations__000492_delete_org_members_on_user_soft_delete.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Extend the soft-delete cleanup trigger to also remove organization_members.
-- organization_members.user_id has ON DELETE CASCADE, but Coder soft-deletes
-- users by flipping users.deleted instead of removing the row, so the
-- FK cascade never fires and memberships would otherwise survive deletion.
-- Removing an org membership also fires
-- trigger_delete_group_members_on_org_member_delete, which cleans up
-- the user's group memberships in that organization automatically.
--
-- Backfill any rows that belonged to already-soft-deleted users before
-- replacing the function.
delete from organization_members
where user_id in (select id from users where deleted);

create or replace function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		-- Remove their api_keys
		delete from api_keys
		where user_id = OLD.id;

		-- Remove their user_links
		-- Their login_type is preserved in the users table.
		-- Matching this user back to the link can still be done by their
		-- email if the account is undeleted. Although that is not a guarantee.
		delete from user_links
		where user_id = OLD.id;

		-- Remove their user_secrets.
		-- user_secrets.user_id has ON DELETE CASCADE, but soft-delete
		-- does not remove the users row so the FK cascade never fires.
		delete from user_secrets
		where user_id = OLD.id;

		-- Remove their organization memberships.
		-- This also triggers group membership cleanup via
		-- trigger_delete_group_members_on_org_member_delete.
		delete from organization_members
		where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;
