crates/formatter/tests/snapshots/snapshots__migrations__000493_idx_chat_diff_statuses_url_lower.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Index on LOWER(url) supports case-insensitive lookups when filtering
-- chats by their associated diff URL (e.g. a pull request URL).
create index idx_chat_diff_statuses_url_lower
on chat_diff_statuses (LOWER(url))
where url is not null and url <> '';
