crates/formatter/tests/snapshots/snapshots__migrations__000494_chat_messages_user_prompts_index.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_chat_messages_user_prompts;
